refactor: fix code smell